--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,230 +1,231 @@
-.main {
+.main {  
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-rows: auto auto auto 1fr; /* Adjusted to ensure proper row structure */
+  padding: 3rem;
+  min-height: 100vh;
+  font-weight: 200;
+}
+
+.nav {
+  position: relative;
+  grid-column: 1 / -1; /* Span all columns */
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.name {
+  grid-column: 1 / 2; /* First column */
+}
+
+
+.title {
+  grid-column: 2 / 3; /* Second column */
+}
+
+.info, .projects, .more {
+  grid-column: 2 / 3; /* Place in the second column */
+  margin-top: 8rem; /* Add margin to the top of each item */
+  padding-top: 1em;
+  font-size: 20px;
+}
+
+.info {
+  grid-row: 2; /* Place in the second row */
+}
+
+.projects {
+  grid-row: 3; /* Place in the third row */
+  margin-top: 5em;
+}
+
+.projectWrapper {
+  display: grid;
+}
+
+.project {
+  position: relative;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  transition: transform 0.2s ease;
+}
+
+.projectName {
+  position: relative;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.arrow {
+  position: absolute;
+  left: -15px; /* Adjust this value to position the arrow */
+  top: 50%; /* Center the arrow vertically */
+  transform: translateY(-50%);
+  width: 10px;
+  height: 10px;
+  background-color: var(--foreground); /* Adjust the color as needed */
+  clip-path: polygon(100% 50%, 0 0, 0 100%);
+  display: none; /* Initially hide the arrow */
+  animation: bounce 1s infinite;
+}
+
+.image{
+  position: absolute;
+  right: -15px; /* Adjust this value to position the arrow */
+  top: 50%; /* Center the arrow vertically */
+  transform: translateY(-50%);
+  width: 400px;
+  height: 200px;
+  display: none;
+  pointer-events: none;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateX(-2px) translateY(-50%);
+  }
+  50% {
+    transform: translateX(2px) translateY(-50%);
+  }
+}
+
+.wrapper {
+  position: relative;
+}
+
+.wrapper:hover .arrowNav {
+  animation: bounceAndDisappear 1s ease infinite;
+}
+
+.arrowNav {
+  position: absolute;
+  left: -20px; /* Adjust this value to position the arrow */
+  top: 50%; /* Center the arrow vertically */
+  transform: translateY(-50%);
+  width: 10px;
+  height: 10px;
+  background-color: var(--foreground); /* Adjust the color as needed */
+  clip-path: polygon(100% 50%, 0 0, 0 100%);
+  z-index: 10;
+}
+
+@keyframes bounceAndDisappear {
+   10%, 110% {
+    transform: translateX(-2px) translateY(-50%);
+  }
+  60%{
+    transform: translateX(2px) translateY(-50%);
+  }
+}
+
+.project:hover .arrow {
+  display: block; /* Show the arrow on hover */
+}
+
+.project:hover .projectName {
+  transform: translateX(5px); /* Adjust the translation amount as needed */
+}
+
+.projectWrapper:hover .project:not(:hover) {
+  opacity: 0.5; /* Reduce opacity for non-hovered project names */
+}
+
+.moreWrapper:hover a:not(:hover) {
+  opacity: 0.5; /* Reduced opacity for other links when one is hovered */
+}
+
+.moreWrapper{
+    display: grid;
+}
+
+.more {
+  grid-row: 4; /* Place in the last row */
+  align-self: end; /* Align to the end of the grid row */
+  margin-bottom: 2em;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+}
+
+.header{
+  padding-bottom: 2em;
+  opacity: 50%;
+}
+
+.customDiv {
+  grid-column: 3 / 4; /* Place in the third column */
+  grid-row: 2 / span 2; /* Span rows from the second row to the fourth row */
+  margin-top: 2em; /* Adjust margin as needed */
   align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  overflow: hidden; /* Ensure the clipped image does not overflow */
+  position: relative; /* Required for absolute positioning of image */
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.customDiv img {
+  position: absolute; /* Position the image absolutely within .customDiv */
+  top: 0%;
+  left: 0%;
+  width: 100%; /* Ensure the image takes full width of .customDiv */
+  height: 100%; /* Maintain aspect ratio */
+  transition: clip-path 1s ease; /* Smooth transition for clip-path change */
+  clip-path: polygon(49% 49%, 51% 49%, 51% 51%, 49% 51%);
+  object-fit: contain;
 }
 
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
+.customDiv .revealTrigger {
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+  top: 49%;
+  left: 49%;
+  width: 2%;
+  height: 2%;
+  z-index: 10;
 }
 
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.customDiv .revealTrigger:hover ~ img {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); /* Full image revealed on hover */
 }
 
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+@media (min-width: 1024px){
+  .project:hover .image {
+    display: block; /* Show the arrow on hover */
+  }  
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
+/* Mobile styles (hide the last two columns) */
+@media (max-width: 1024px) {
+  .main {
+    grid-template-columns: 1fr; /* Single column layout */
   }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
+  .customDiv {
+    display: none; /* Hide the image column */
   }
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
+  .nav {
     display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
+    flex-direction: column; /* Stack items vertically */
+    align-items: flex-start; /* Align items to the left */
+    padding-bottom: 4em;
   }
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+  .name, .title {
+    display: block; /* Change to block for proper alignment */
+    margin: 0; /* Remove any default margins */
+    text-align: left; /* Align text to the left */
   }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
+  .title {
+    margin-top: 0.5rem; /* Add a bit of space between name and title */
   }
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+  .info, .projects, .more {
+    grid-column: 1 / -1; /* Span the entire column */
+    margin-top: 1rem; /* Adjust margin for spacing */
+    padding-top: 1rem; /* Adjust padding for spacing */
   }
 }
