--- a/app/globals.css
+++ b/app/globals.css
@@ -47,22 +47,18 @@ a {
 
 @keyframes pushleft {
   0% {
-      transform: translateX(0);
-      opacity: 1;
+      transform: translateY(0);
   }
   100% {
-      transform: translateX(100vw);
-      opacity: 0;
+      transform: translateY(-100vw);
   }
 }
 @keyframes fromleft {
   0% {
-      transform: translateX(-100vw);
-      opacity: 0;
+      transform: translateY(100vw);
   }
   100% {
-      transform: translateX(0);
-      opacity: 1;
+      transform: translateY(0);
   }
 }
 
