--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(4, minmax(0, 1fr));
   grid-template-rows: auto auto auto 1fr; /* Adjusted to ensure proper row structure */
   padding: 3rem;
-  min-height: 100vh;
+  height: 100vh;
   font-weight: 200;
 }
 
@@ -18,8 +18,22 @@
 
 .name {
   grid-column: 1 / 2; /* First column */
+  animation: blink 5s infinite;
 }
 
+.name:hover {
+  opacity: 1;
+  animation-play-state: paused;
+}
+
+@keyframes blink {
+  1%, 3%, 5%, 7% {
+    opacity: 0.5;
+  }
+  0%, 2%, 4%, 6%, 8% {
+    opacity: 1;
+  }
+}
 
 .title {
   grid-column: 2 / 3; /* Second column */
@@ -27,7 +41,7 @@
 
 .info, .projects, .more {
   grid-column: 2 / 3; /* Place in the second column */
-  margin-top: 8rem; /* Add margin to the top of each item */
+  margin-top: 4rem; /* Add margin to the top of each item */
   padding-top: 1em;
   font-size: 20px;
 }
@@ -73,17 +87,6 @@
   clip-path: polygon(100% 50%, 0 0, 0 100%);
   display: none; /* Initially hide the arrow */
   animation: bounce 1s infinite;
-}
-
-.image{
-  position: absolute;
-  right: -15px; /* Adjust this value to position the arrow */
-  top: 50%; /* Center the arrow vertically */
-  transform: translateY(-50%);
-  width: 400px;
-  height: 200px;
-  display: none;
-  pointer-events: none;
 }
 
 @keyframes bounce {
