--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
+  margin: 0;
 }
 
 body {
@@ -37,6 +39,10 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+p {
+  font-size: 18px;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -67,4 +73,10 @@ a {
 }
 ::view-transition-new(root) {
   animation: fromleft 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@media screen and (max-width: 768px) {
+  p {
+    font-size: 16px;
+  }
 }
