--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,41 +2,9 @@
   display: grid;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   grid-template-rows: auto auto auto 1fr; /* Adjusted to ensure proper row structure */
-  padding: 3rem;
+  padding: 1rem;
   height: 100vh;
   font-weight: 200;
-}
-
-.nav {
-  position: relative;
-  grid-column: 1 / -1; /* Span all columns */
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-  font-size: 20px;
-  text-decoration: none;
-}
-
-.name {
-  grid-column: 1 / 2; /* First column */
-  animation: blink 5s infinite;
-}
-
-.name:hover {
-  opacity: 1;
-  animation-play-state: paused;
-}
-
-@keyframes blink {
-  1%, 3%, 5%, 7% {
-    opacity: 0.5;
-  }
-  0%, 2%, 4%, 6%, 8% {
-    opacity: 1;
-  }
-}
-
-.title {
-  grid-column: 2 / 3; /* Second column */
 }
 
 .info, .projects, .more {
@@ -46,8 +14,48 @@
   font-size: 20px;
 }
 
+@keyframes bounceAndDisappear {
+   10%, 110% {
+    transform: translateX(-2px) translateY(-50%);
+  }
+  60%{
+    transform: translateX(2px) translateY(-50%);
+  }
+}
+
 .info {
   grid-row: 2; /* Place in the second row */
+  position: relative;
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  position: relative;
+  margin-top: 0.5em;
+  opacity: 50%;
+  transition: transform 0.3s ease-in-out;
+}
+
+.buttonText{
+  transition: transform 0.3s ease-in-out;
+}
+
+.buttonArrow {
+  transition: transform 0.3s ease-in-out;
+}
+
+.button:hover{
+  opacity: 100%;
+}
+
+.button:hover .buttonText {
+  transform: translateX(2px);
+}
+
+.button:hover .buttonArrow {
+  transform: rotate(45deg); /* Immediate transform to match the final state of the animation */
+  animation: none;
 }
 
 .projects {
@@ -149,48 +157,15 @@
 
 .more {
   grid-row: 4; /* Place in the last row */
-  align-self: end; /* Align to the end of the grid row */
   margin-bottom: 2em;
   display: flex;
   flex-direction: column;
+  margin-top: 5em;
 }
 
 .header{
   padding-bottom: 2em;
   opacity: 50%;
-}
-
-.customDiv {
-  grid-column: 3 / 4; /* Place in the third column */
-  grid-row: 2 / span 2; /* Span rows from the second row to the fourth row */
-  margin-top: 2em; /* Adjust margin as needed */
-  align-items: center;
-  overflow: hidden; /* Ensure the clipped image does not overflow */
-  position: relative; /* Required for absolute positioning of image */
-}
-
-.customDiv img {
-  position: absolute; /* Position the image absolutely within .customDiv */
-  top: 0%;
-  left: 0%;
-  width: 100%; /* Ensure the image takes full width of .customDiv */
-  height: 100%; /* Maintain aspect ratio */
-  transition: clip-path 1s ease; /* Smooth transition for clip-path change */
-  clip-path: polygon(49% 49%, 51% 49%, 51% 51%, 49% 51%);
-  object-fit: contain;
-}
-
-.customDiv .revealTrigger {
-  position: absolute;
-  top: 49%;
-  left: 49%;
-  width: 2%;
-  height: 2%;
-  z-index: 10;
-}
-
-.customDiv .revealTrigger:hover ~ img {
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%); /* Full image revealed on hover */
 }
 
 @media (min-width: 1024px){
@@ -209,13 +184,6 @@
     display: none; /* Hide the image column */
   }
 
-  .nav {
-    display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items: flex-start; /* Align items to the left */
-    padding-bottom: 4em;
-  }
-
   .name, .title {
     display: block; /* Change to block for proper alignment */
     margin: 0; /* Remove any default margins */
@@ -228,7 +196,5 @@
 
   .info, .projects, .more {
     grid-column: 1 / -1; /* Span the entire column */
-    margin-top: 1rem; /* Adjust margin for spacing */
-    padding-top: 1rem; /* Adjust padding for spacing */
   }
 }
