--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,18 @@
 :root {
-  --background: white;
-  --foreground: black;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
 }
 
-[data-theme='dark'] {
-  --background: black;
-  --foreground: white;
+html.dark {
+  --foreground: #fff; /* dark mode */
+  --background: #121212;
+}
+
+html.light {
+  --foreground: #121212; /* light mode */
+  --background: #fff;
 }
 
 * {
@@ -24,17 +27,9 @@ body {
   overflow-x: hidden;
   height: 100%;
   margin: 0;
+  background-color: var(--background);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
 
 a {
   color: inherit;
@@ -43,12 +38,6 @@ a {
 
 p {
   font-size: 18px;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
 
 @keyframes pushleft {
