--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,46 @@ body {
   background-color: var(--background);
 }
 
+.loadingScreen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: var(--foreground);
+  z-index: 1000;
+  animation: slide-up 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+  animation-delay: 1.25s;
+  color: var(--background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+.loadingScreen h1 {
+  opacity: 0;
+  animation: fade-in-name 0.5s 0.25s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
+}
+
+@keyframes slide-up {
+  0% {
+    top: 0;
+  }
+  100% {
+    top: -100%;
+    display: none;
+  }
+}
+
+@keyframes fade-in-name {
+  0% {
+    opacity: 0; /* Start opacity */
+    transform: translateY(50px); /* Start position */
+  }
+  100% {
+    opacity: 1; /* End opacity */
+    transform: translateY(0); /* End position */
+  }
+}
 
 a {
   color: inherit;
